--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <meta name="p:domain_verify" content="78f280fce01d5bff28de068601aaea3f" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/artsunday.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
